<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#303F9F"
    tools:context=".AddNewRecord">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="340dp"
        android:layout_height="80dp"
        android:layout_marginTop="72dp"
        app:cardBackgroundColor="#40E4AEAE"
        app:cardCornerRadius="15dp"
        app:cardElevation="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/addRecTitle"
            android:layout_width="301dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:fontFamily="@font/pokemonsolid"
            android:text="@string/addRecTitle"
            android:textColor="#FBC02D"
            android:textSize="42sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView3"
        android:layout_width="369dp"
        android:layout_height="350dp"
        android:layout_marginTop="40dp"
        app:cardBackgroundColor="#F1EFEB"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="@+id/cardView2"
        app:layout_constraintStart_toStartOf="@+id/cardView2"
        app:layout_constraintTop_toBottomOf="@+id/cardView2">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/txt_id_name"
                android:layout_width="320dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/characterName"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/txt_id_gen"
                android:layout_width="320dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/characterGen"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="@+id/txt_id_name"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/txt_id_name"
                app:layout_constraintTop_toBottomOf="@+id/txt_id_name" />

            <EditText
                android:id="@+id/txt_id_type"
                android:layout_width="320dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/characterType"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="@+id/txt_id_gen"
                app:layout_constraintHorizontal_bias="0.485"
                app:layout_constraintStart_toStartOf="@+id/txt_id_gen"
                app:layout_constraintTop_toBottomOf="@+id/txt_id_gen" />

            <EditText
                android:id="@+id/txt_id_imgurl"
                android:layout_width="320dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/characterImgurl"
                android:inputType="text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/txt_id_type"
                app:layout_constraintHorizontal_bias="0.523"
                app:layout_constraintStart_toStartOf="@+id/txt_id_type"
                app:layout_constraintTop_toBottomOf="@+id/txt_id_type"
                app:layout_constraintVertical_bias="0.062" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btn_id_save"
        android:layout_width="154dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#388E3C"
        android:fontFamily="@font/nextsunday"
        android:text="@string/btnSaveRec"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView3" />

    <Button
        android:id="@+id/btn_id_cancel"
        android:layout_width="153dp"
        android:layout_height="59dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#D32F2F"
        android:fontFamily="@font/nextsunday"
        android:text="@string/btnCancelRect"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_id_save"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btn_id_save"
        app:layout_constraintTop_toBottomOf="@+id/btn_id_save" />

</androidx.constraintlayout.widget.ConstraintLayout>