<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:elevation="25dp"
    app:cardUseCompatPadding="true"
    app:cardBackgroundColor="#0097A7">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        >

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img1_id"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="5dp"
            android:src="@mipmap/ic_launcher"
            app:civ_border_color="#FBC02D"
            app:civ_border_width="5dp"
            tools:ignore="ImageContrastCheck" />

        <androidx.cardview.widget.CardView
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="110dp"
            app:cardBackgroundColor="#303F9F"
            app:cardCornerRadius="10dp"
            tools:ignore="TextSizeCheck">

            <TextView
                android:id="@+id/name_char_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/nextsunday"
                android:text="@string/characterName"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/gen_char_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/nextsunday"
                android:text="@string/characterGen"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/type_char_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/nextsunday"
                android:text="@string/characterType"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/img1_id"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:backgroundTint="#689F38"
                android:textColor="#FBC02D"
                android:textSize="16sp"
                android:text="@string/btnEdit"
                android:fontFamily="@font/nextsunday">
            </Button>

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:backgroundTint="#D32F2F"
                android:textColor="#FBC02D"
                android:textSize="16sp"
                android:text="@string/btnDelete"
                android:fontFamily="@font/nextsunday">

            </Button>
        </LinearLayout>



    </RelativeLayout>


</androidx.cardview.widget.CardView>