<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#303F9F">


    <TextView
        android:id="@+id/charUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FBC02D"
        android:fontFamily="@font/pokemonsolid"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/pokeUpdate"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <!-- CHARACTER NAME -->

    <!-- CHARACTER NUMBER -->

    <TextView
        android:id="@+id/CharName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nextsunday"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:text="@string/characterName"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edit_char_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:fontFamily="@font/nextsunday"
        android:hint="@string/characterName"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:ignore="DuplicateSpeakableTextCheck,RtlSymmetry,VisualLintTextFieldSize" />

    <TextView
        android:id="@+id/charGen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nextsunday"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:text="@string/characterGen"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edit_char_Gen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:fontFamily="@font/nextsunday"
        android:hint="@string/characterGen"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:textColor="#FAFAFA"
        android:textColorHint="@color/white"
        tools:ignore="DuplicateSpeakableTextCheck,RtlSymmetry,TextFields,VisualLintTextFieldSize" />

    <!-- CHARACTER POWER -->
    <TextView
        android:id="@+id/charType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nextsunday"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="5dp"
        android:text="@string/characterType"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edit_char_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:fontFamily="@font/nextsunday"
        android:hint="@string/characterType"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        tools:ignore="DuplicateSpeakableTextCheck,RtlSymmetry,VisualLintTextFieldSize" />

    <!-- CHARACTER IMGURL -->
    <TextView
        android:id="@+id/charImg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/nextsunday"
        android:gravity="center_horizontal"
        android:paddingBottom="5dp"
        android:text="@string/characterImgurl"
        android:textColor="#FDFDFD"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/edit_char_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:fontFamily="@font/nextsunday"
        android:hint="@string/characterImgurl"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:paddingStart="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        tools:ignore="DuplicateSpeakableTextCheck,RtlSymmetry,VisualLintTextFieldSize" />

    <Button
        android:id="@+id/btn_id_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="#388E3C"
        android:fontFamily="@font/nextsunday"
        android:text="@string/pokeUpdate"
        android:textColor="#EEF5FF"
        tools:ignore="VisualLintButtonSize" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp" />

</LinearLayout>